--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -27,6 +27,8 @@
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
 </div>
+<div id="warning" class="alert alert-block announcement alert-warning" visibility="hidden">
+</div>
 <div class="row">
     <div class="col-md-9">
 		<div id="embedded_map" class="mrg-btm">
