--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -152,11 +152,11 @@ function display_points(div_id, vec_layer){
     document.getElementById("georef_area").setAttribute("value",georef_string);
 }
 
-function display_message(div_id, message){
+function display_message(div_id, text_container_id, message){
     var container=document.getElementById(div_id);
-    container.innerHTML = message;
-    container.style.visibillity = "visible";
-    container.style.display = "inline";
+    var text = document.getElemebtById(text_container_id);
+    text.innerHTML = message;
+    container.setAttribute("hidden","visible");
     //container.setAttribute("visibility", "visible");
 }
 
@@ -280,14 +280,15 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                   if (tiles.length < feature_out.length){
                       if (feature_out.length==1){
                             //alert("Selected tile either lacks data or is out of bounds. ");
-                            display_message("warning","Selected tile either lacks data or is out of bounds." );
+                            display_message("status-message-text-body","Selected tile either lacks data or is out of bounds." );
                       }else{
                             //alert("Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
-                            display_message("warning","Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
+                            display_message("status-message-text-body","Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
                       }
                   }else{
-                      document.getElementById("warning").style.visibilty =  "visible";
-                      document.getElementById("warning").style.display =  "inline";
+                      /*document.getElementById("warning").style.visibilty =  "visible";
+                      document.getElementById("warning").style.display =  "inline";*/
+                      container.setAttribute("hidden","hidden");
                   }
              }
          }
