--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -154,7 +154,7 @@ function display_points(div_id, vec_layer){
 
 function display_message(div_id, text_container_id, message){
     var container=document.getElementById(div_id);
-    var text = document.getElemebtById(text_container_id);
+    var text = document.getElementById(text_container_id);
     text.innerHTML = message;
     container.setAttribute("hidden","visible");
     //container.setAttribute("visibility", "visible");
