--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -158,7 +158,7 @@ function display_message(div_id, text_container_id, message){
     var text = document.getElementById(text_container_id);
     console.log(text);
     text.innerHTML = message;
-    container.setAttribute("hidden","visible");
+    container.setAttribute("hidden","false");
     //container.setAttribute("visibility", "visible");
 }
 
