--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -246,10 +246,8 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
      var arg_obj = {
          filter: tile_filter,
          single_click: single_click,
-          send_notice: send_notice,
+         send_notice: send_notice,
          callback: function(response){
-             console.log(this.single_click);
-             console.log(this.send_notice);
              if(response.priv.responseText){
                  json_parser = new OpenLayers.Format.GeoJSON();
                  feature_out = json_parser.read(response.priv.responseText);
@@ -283,10 +281,10 @@ function filterSelectedTiles(tile_filter, single_click, send_notice){
                   if (tiles.length < feature_out.length){
                       if (feature_out.length==1){
                             //alert("Selected tile either lacks data or is out of bounds. ");
-                            display_message("status-message","status-message-text","Selected tile either lacks data or is out of bounds." );
+                            display_message("selection-message","selection-message-text","Selected tile either lacks data or is out of bounds." );
                       }else{
                             //alert("Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
-                            display_message("status-message","status-message-text","Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
+                            display_message("selection-message","selection-message-text","Some selected tiles have not been included in the list due to lack of data or being outside the jurisdiction boundaries");
                       }
                   }else{
                       /*document.getElementById("warning").style.visibilty =  "visible";
