--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -23,8 +23,8 @@
 
 {% block body_outer %}
 {% block body %}
-<div class="alert alert-warn" id="selection-message" style="visibility: hidden">
-    <a class="close" onclick="$('.alert').hide()" hidden="inherit">×</a>
+<div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
+    <a type="button" class="close" data-dismiss="alert" data-dismiss-url="#" href="#">×</a>
     <strong><p id="selection-message-text">Placeholder for status-message</p></strong>  
 </div>
 <div class="page-header">
