--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -25,7 +25,7 @@
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
     <a type="button" class="close" data-dismiss="alert" data-dismiss-url="#" href="#">×</a>
-    <strong><p id="selection-message-text">Placeholder for status-message</p></strong>  
+    <p id="selection-message-text">Placeholder for status-message</p>
 </div>
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
