--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -95,6 +95,10 @@ $(document).ready(function(){
                 highlight_layer
             );
         });
+        
+        $("#selection-message-close").click(function(e){
+            $("#selection-message").hide();
+        });
        
 });
 
@@ -156,10 +160,11 @@ function display_message(div_id, text_container_id, message){
     var container=document.getElementById(div_id);
     console.log(container);
     var text = document.getElementById(text_container_id);
-    console.log(text);
+    //console.log(text);
     text.innerHTML = message;
     //container.setAttribute("hidden","false");
-    container.style.visibility="visible";
+    //container.style.visibility="visible";
+    $(div_id).show();
     //container.setAttribute("visibility", "visible");
 }
 
