--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -24,7 +24,7 @@
 {% block body_outer %}
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
-    <a type="button" class="close" data-dismiss="alert" data-dismiss-url="#" href="#">×</a>
+    <a type="button" class="close" data-dismiss="alert" data-dismiss-url="#" href="#" id="selection-message-close">×</a>
     <p id="selection-message-text">Placeholder for status-message</p>
 </div>
 <div class="page-header">
