--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -97,7 +97,8 @@ $(document).ready(function(){
         });
         
         $("#selection-message-close").click(function(e){
-            $("#selection-message").hide();
+            //$("#selection-message").hide();
+            container.style.visibility="hidden";
         });
        
 });
