--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
         
         $("#selection-message-close").click(function(e){
             //$("#selection-message").hide();
-            container.style.visibility="hidden";
+            document.getElementById("status-message").style.visibility="hidden";
         });
        
 });
