--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -98,7 +98,8 @@ $(document).ready(function(){
         
         $("#selection-message-close").click(function(e){
             //$("#selection-message").hide();
-            document.getElementById("status-message").style.visibility="hidden";
+            //document.getElementById("status-message").style.visibility="hidden";
+            document.getElementById("status-message").style.display="none";
         });
        
 });
@@ -163,7 +164,8 @@ function display_message(div_id, text_container_id, message){
     //console.log(text);
     text.innerHTML = message;
     //container.setAttribute("hidden","false");
-    container.style.visibility="visible";
+    //container.style.visibility="visible";
+    container.style.display="block";
     //container.setAttribute("visibility", "visible");
 }
 
