--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
         
         $("#selection-message-close").click(function(e){
             //$("#selection-message").hide();
-            document.getElementById("status-message").style.visibility="collapse";
+            document.getElementById("selection-message").style.visibility="collapse";
             //document.getElementById("status-message").style.display="none";
         });
        
