--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -24,8 +24,8 @@
 {% block body_outer %}
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
-    <a type="button" data-dismiss="alert" data-dismiss-url="#" href="#" id="selection-message-close">×</a>
-    <p id="selection-message-text">Placeholder for status-message</p>
+    
+    <p id="selection-message-text">Placeholder for status-message</p><a type="button" data-dismiss="alert" data-dismiss-url="#" href="#" id="selection-message-close">×</a>
 </div>
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
