--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -24,8 +24,9 @@
 {% block body_outer %}
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
-    
-    <p id="selection-message-text">Placeholder for status-message</p><a type="button" href="#" id="selection-message-close">×</a>
+    <tr>
+    <td><p id="selection-message-text">Placeholder for status-message</p></td><td align="right"><a type="button" href="#" id="selection-message-close">×</a></td>
+    </tr>
 </div>
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
