--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -25,7 +25,7 @@
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
     <tr>
-    <td><p id="selection-message-text">Placeholder for status-message</p></td><td align="right"><a type="button" href="#" id="selection-message-close">×</a></td>
+    <td><div id="selection-message-text">Placeholder for status-message</div></td><td align="right"><a type="button" href="#" id="selection-message-close">×</a></td>
     </tr>
 </div>
 <div class="page-header">
