--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -24,9 +24,8 @@
 {% block body_outer %}
 {% block body %}
 <div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
-    <table><tr>
-    <td id="selection-message-text">Placeholder for status-message</td><td align="right"><a type="button" href="#" id="selection-message-close">×</a></td>
-    </tr></table>
+    <a type="button" data-dismiss-url="#" href="#">×</a>
+    <p id="selection-message-text">Placeholder for status-message</p>
 </div>
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
