--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -23,9 +23,9 @@
 
 {% block body_outer %}
 {% block body %}
-<div class="alert alert-block announcement alert-warning " id="selection-message" style="visibility: hidden">
-    <a type="button" class="close" data-dismiss="alert" data-dismiss-url="#" href="#" id="selection-message">×</a>
-    <p id="selection-message-text">Placeholder for status-message</p>
+<div id="notif">
+
+</div>
 </div>
 <div class="page-header">
   <h2 class="page-title">Map Tiles</h2>
