--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -160,7 +160,7 @@ function display_points(div_id, vec_layer){
 function display_message(div_id, message){
     
     var container=document.getElementById(div_id);
-    container.innerHTML = "<div class=\"alert alert-block announcement alert-warning\" style=\"visibility: hidden\">\n"+
+    container.innerHTML = "<div class=\"alert alert-block announcement alert-warning\" style=\"visibility: visible\">\n"+
         "<a type=\"button\" class=\"close\" data-dismiss=\"alert\" data-dismiss-url=\"#\" href=\"#\">×</a>\n"+
         "<p id=\"selection-message-text\">"+message+"</p>\n;"
     //console.log(text);
