added data class selection in template

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -84,7 +84,7 @@
 -->
  <form name="georef_form" id="georef_form" action="/maptiles/addtocart/" method="POST" >
      {% csrf_token %}
-<!--
+
      <div class="col-md-4">
        <nobr>
          <ul class="list-inline pull-left">
@@ -96,8 +96,8 @@
          </ul>
        </nobr>
      </div>
--->
-    <div class="col-md-4" align="right">
+
+    <div class="col-md-4">
      <input type="text" id="georef_area" name="georef_area" style="display:none" />
      <input type="submit" id="georef_submit" name="georef_submit" value="Submit" class="btn btn-default" />
     </div>
