--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -62,6 +62,16 @@
               <a href="{% url "document_browse" %}">{% trans "Documents" %}</a>
             </li>
            {% block extra_tab %}
+               <li class="dropdown" id="nav_geosafe">
+                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                       {% trans "GeoSAFE" %}
+                       <span class="caret"></span>
+                   </a>
+                   <ul class="dropdown-menu">
+                       <li><a href="{% url "analysis-create" %}">{% trans "Create Analysis" %}</a></li>
+                       <li><a href="{% url "analysis-list" %}">{% trans "List Analysis" %}</a></li>
+                   </ul>
+               </li>
            {% endblock %}
             <li id="nav_people">
               <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
