--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -53,6 +53,7 @@ var app, map;
 var tile_list = [];
 var highlight_layer;
 var jurisdiction_geoms = [];
+var tile_cache = [];
 var interest_bounds; 
 //var geoserver = "{{geoserver}}";
 //var geoserver = curr_location+"/geoserver/";
