--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -14,7 +14,7 @@
       <h2 class="page-title">FTP Request Detail</h2>
   </div>
 
-  <div class="col-md-6">
+  <!--<div class="col-md-6">
   <ul class="list-inline pull-left" id="sort">
     <li><b>SORT BY:</b></li>
     {% for sort_type in sort_types %}
@@ -25,7 +25,7 @@
 	  {% endif %}
     {% endfor %}
   </ul>  
-  </div>
+  </div>-->
   <br /><br /><br />
   Request Name: {{req_details.name}}
   Request Date and Time: {{req_details.date_time}}
