debugging ftp request details view

--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -27,10 +27,10 @@
   </ul>  
   </div>-->
   <br /><br /><br />
-  Request Name: {{req_details.name}}
-  Request Date and Time: {{req_details.date_time}}
-  Request Status: {{req_details.status}}
-  Request Size: {{req_details.size_in_bytes}}
+  Request Name: {{req_details.name}} <br />
+  Request Date and Time: {{req_details.date_time}} <br />
+  Request Status: {{req_details.status}} <br />
+  Request Size: {{req_details.size_in_bytes}} <br />
   
     {% for co in cephobjects %}
     <!--<tr id="{{ ftp_req.name }}" name="{{ ftp_req.name }}" style="text-align: center;">
