--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -26,13 +26,20 @@
     {% endfor %}
   </ul>  
   </div>-->
-  <br /><br /><br />
+  <br />
   Request Name: {{req_details.name}} <br />
   Request Date and Time: {{req_details.date_time}} <br />
   Request Status: {{req_details.status}} <br />
   Request Size: {{req_details.size_in_bytes}} <br />
   Number of Items in Request: {{num_items}}
   
+  <table>
+       <tr id="cart_table" border="3" style="width:100% ">
+        <th style="text-align: center;">{% trans "Name" %}</th>
+        <th style="text-align: center;">{% trans "Size" %}</th>
+        <th style="text-align: center;">{% trans "Data Class" %}</th>
+        <th style="text-align: center;">{% trans "Last Modified" %}</th>
+      </tr >
     {% for co in cephobjects %}
     <!--<tr id="{{ ftp_req.name }}" name="{{ ftp_req.name }}" style="text-align: center;">
         <td>{{ ftp_req.name }}</td>
