used select_related in ftp request details view

--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -27,12 +27,14 @@
   </ul>  
   </div>-->
   <br />
+  <div class="col-md-6">
   Request Name: {{req_details.name}} <br />
   Request Date and Time: {{req_details.date_time}} <br />
   Request Status: {{req_details.status}} <br />
   Request Size: {{req_details.size_in_bytes}} <br />
   Number of Items in Request: {{num_items}}
-  
+  </div>
+  <br /><br /><br />
   <table>
        <tr id="cart_table" border="3" style="width:100% ">
         <th style="text-align: center;">{% trans "Name" %}</th>
