debugging ftp request details view

--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -35,6 +35,7 @@
   Number of Items in Request: {{num_items}}   <br />
   </div>
   <br /><br />
+   <div class="col-md-6">
   <table>
        <tr id="cart_table" border="3" style="width:100% ">
         <th style="text-align: center;">{% trans "Name" %}</th>
@@ -42,7 +43,7 @@
         <th style="text-align: center;">{% trans "Data Class" %}</th>
         <th style="text-align: center;">{% trans "Last Modified" %}</th>
       </tr >
-    {% for co in objects %}
+    {% for o in objects %}
     <!--<tr id="{{ ftp_req.name }}" name="{{ ftp_req.name }}" style="text-align: center;">
         <td>{{ ftp_req.name }}</td>
         <td>{{ ftp_req.date_time }}</td>
@@ -56,9 +57,9 @@
         <td>{{ co.data_class}}</td>
         <td>{{ co.last_modified}}</td>
     </tr>
-    {% endfor %}
-
+    {% endfor %
   </table>
+  </div>
 {% endblock body %}
  {% block sidebar %}{% endblock sidebar %}
 {% endblock body_outer %}
