debugging ftp request details view

--- a/geonode/cephgeo/templates/ftp_details.html
+++ b/geonode/cephgeo/templates/ftp_details.html
@@ -57,7 +57,7 @@
         <td>{{ co.data_class}}</td>
         <td>{{ co.last_modified}}</td>
     </tr>
-    {% endfor %
+    {% endfor %}
   </table>
   </div>
 {% endblock body %}
